# insurance_price_predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  frontend.py  main.ipynb  model.pkl  pyproject.toml  requirements.txt
app/: app.py  frontend.py
